# vpsweb

./: .aicodeprep-gui  .env.example  .env.local.template  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CHANGELOG_v0.3.2.md  CLAUDE.md  CLAUDE_RELEASE_PROCESS.md  CONTRIBUTING.md  DEVELOPMENT.md  GEMINI.md  IMPLEMENTATION_PLAN_translation_notes_display.md  MERGE_PLAN.md  README.md  REVIEW_SYSTEM.md  STATUS.md  ToDos.md  VERSION_WORKFLOW.md  WeChat_Article_Generation_&_Publishing_Expansion_for_vpsweb.md  backup.sh  dev-check.sh  fullcode.txt  project_tracking.md  push-version.sh  pyproject.toml  pytest.ini  release-checklist.md  restore.sh  save-version.sh  test_background_task.py  test_executor_simple.py  test_http2_deepseek.py  test_http2_qwen.py  test_parser_simple.py  test_serialization.py  test_sse_debug.py  test_sse_integration.py  vulture_whitelist.py
.claude/: CLAUDE.md  instructions.md
.codebuddy/: analysis-summary.json
.gemini/: settings.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  commit-lint.yml  release.yml
backup_20251019_153058_old_repository/: __init__.py  ai_logs.py  app.py  backup_restore.py  base.py  config.py  content_negotiation.py  database.py  database_optimization.py  docs.py  error_messages.py  exceptions.py  form_validation.py  human_notes.py  init_db.py  maintenance.py  models.py  openapi_config.py  pagination.py  poems.py  query_optimization.py  sanitization.py  schemas.py  search.py  security.py  server.py  translations.py  validation.py  versioning.py  vpsweb_adapter.py
backup_20251019_153058_old_repository/api/: __init__.py
backup_20251019_153058_old_repository/database/: __init__.py  models.py  repository.py
backups/: CLAUDE.md
config/: default.yaml  models.yaml  repository.yaml  task_templates.yaml  wechat.yaml
config/html_templates/: README.md
config/prompt_V2/: background_briefing_report.yaml  initial_translation_nonreasoning.yaml  translator_revision_nonreasoning.yaml
config/prompts/: BBR_full.yaml  BBR_translator.yaml  background_briefing_report.yaml  editor_review.yaml  editor_review_nonreasoning.yaml  editor_review_reasoning.yaml  initial_translation.yaml  initial_translation_nonreasoning.yaml  initial_translation_reasoning.yaml  translator_revision.yaml  translator_revision_nonreasoning.yaml  translator_revision_reasoning.yaml  wechat_article_notes_nonreasoning.yaml  wechat_article_notes_reasoning.yaml
config/prompts_V1/: wechat_article_notes_reasoning.yaml
config/prompts_V2/: editor_review_reasoning.yaml  initial_translation_nonreasoning.yaml  translator_revision_nonreasoning.yaml
config/prompts_V3/: background_briefing_report.yaml  editor_review_reasoning.yaml  initial_translation_nonreasoning.yaml  translator_revision_nonreasoning.yaml
docs/: ARCHITECTURE.md  Alembic_Migration_Guide.md  Database_Performance_Optimization.md  Day3_Implementation_Summary.md  Day6_QA_Testing_Report.md  Day7_Integration_Testing_Summary.md  Day7_Release_Summary_v0.3.1.md  Dependency_Update_Summary_v0.3.1.md  Development_Setup.md  Enhanced_TODO_Process.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_PLAN_NOTES_IN_DB.md  MCP_Tools_Usage_Framework.md  MCP_Usage_Commitment.md  PSD-reasoning-CC.md  PSD_Directory_Based_Publishing.md  Prompts Pad.md  Quick_Start.md  Rotating_Logging_Guide.md  TESTING_GUIDE.md  Tools Used.md  User_Friendly_Error_Pages_Implementation.md  User_Guide.md  WebUI_Testing_Guide.md  api-patterns.md  api_reference.md  background_task_system.md  backup_restore_guide.md  code_review_results.md  configuration.md  documentation-standards.md  frontend-enhancement-proposal.md  frontend_integration_translation.md  future-development.md  manual_workflow_implementation_plan.md  manual_workflow_implementation_plan_cc.md  misc.md  phase-1-implementation-notes.md  pipeline-phase1-modularization.md  pipeline-phase2-parallel.md  (+5 more)
docs/DSLFiles/: Vox Poetica Translation Studio.yml
docs/Dev_notes/: Development Prompts.md  RELEASE_WORKFLOW_gpt5high.md  Testing and Commit.md  Tools.md  Tools_tmp.html  VERSION_WORKFLOW_cc.md  codebuddy.html
docs/PSD_Collection/: PSD_CC.md  PSD_Directory_Based_Publishing.md  PSD_WeChat_Integration_Revised_v0.3.0.md  PSD_gemini.md  PSD_opus.md  PSD_repo_gemini.md  ask4pro_2.txt  reasoning-deepseek.md  reasoning_gemini.md
docs/Prompt_Improvements/: request.txt
docs/Strategy_Collections/: strategy_repo_cc.md
docs/backups/: Claude_bestpractice.md  REFLECTION_SYSTEM.md  article.html
docs/best_practice/: 01-project-setup.md  02-phase-planning.md  04-development-workflow.md  05-testing-strategy.md  10-mcp-tools-best-practices.md  NEW_PROJECT_STARTUP_GUIDE.md  QUICK_VALIDATION.md  README.md  README_UPDATED.md
docs/claudecode/: CODE_REVIEW_ISSUES_RESOLUTION_STATUS.md  FINAL_COMPLETION_SUMMARY.md  README.md  branch_refactoring_strategy_v2.md  code_quality_analysis_1102.md  code_review_report_1102.md  execution_automation_v2.md  project_tracking_system_v2.md  refactor_implementation_plan_v2.md
docs/future/: thoughts_on_future.md
docs/geminicli/: code_review_report.md  code_review_report_1101.md  code_review_report_1101_new.md  code_review_report_1102.md
docs/reflections/: reflection-index.md  reflection-insights-summary.md
docs/reviews/: review-index.md  review-insights-summary.md
docs/translation_best_practices/: best practices.md
examples/: basic_usage.py
examples/poems/: short_chinese.txt  short_english.txt
repository_root/: repo.db-shm  repo.db-wal
scripts/: backup.sh  clean-start.sh  daily_handshake_v2.sh  demo_alembic_migrations.py  demo_rotating_logging.py  devtoolsbrowser.sh  integration_test.sh  mcp_enhanced_tracker_v2.py  reset.sh  restore.sh  setup-database.sh  setup.sh  start.sh  status_check_v2.sh  stop.sh  test.sh  work_session_manager_v2.py
src/: CHANGELOG.md
src/vpsweb/: __init__.py  __main__.py
tests/: conftest.py  conftest_di_v2.py  test_background_tasks_integration.py  test_database_fixtures.py
tests/integration/: test_api_endpoints.py  test_api_endpoints_basic.py  test_bbr.py  (+6 more)
(+222 files in other folders)
