[tool.poetry]
name = "vpsweb"
version = "0.6.5"
description = "Vox Poetica Studio Web - Professional AI-powered poetry translation using a collaborative Translator→Editor→Translator workflow"
authors = ["VPSWeb Development Team <dev@vpsweb.ai>"]
readme = "README.md"
packages = [{include = "src/vpsweb"}]
keywords = ["poetry", "translation", "ai", "llm", "chinese", "english", "literature", "natural-language-processing"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Linguistic",
    "Topic :: Software Development :: Internationalization"
]
include = ["CHANGELOG.md", "STATUS.md", "DEVELOPMENT.md", "CONTRIBUTING.md", "LICENSE"]

[tool.poetry.dependencies]
python = "^3.9"
pyyaml = "^6.0.1"
pydantic = ">=2.5.0"
httpx = "^0.27.0"
click = "^8.1.7"
python-dotenv = "^1.0.1"
jinja2 = "^3.1.2"

# Repository system dependencies (v0.3)
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.32.0"}
sqlalchemy = "^2.0.35"
aiosqlite = "^0.20.0"
pydantic-settings = "^2.6.0"
python-multipart = "^0.0.12"
structlog = "^24.4.0"
ulid2 = "^0.3.0"
sse-starlette = "^1.8.2"

# Input validation and security dependencies
bleach = "^6.2.0"
beautifulsoup4 = "^4.12.3"
python-dateutil = "^2.9.0.post0"
pytz = "^2024.2"

# Authentication dependencies (v0.4+) - commented out for v0.3
# passlib = "^1.7.4"
# argon2-cffi = "^23.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"
pytest-cov = "^6.0.0"
pytest-asyncio = "^1.2.0"
pytest-mock = "^3.15.1"
pytest-xdist = "^3.8.0"
black = "^24.10.0"
flake8 = "^7.1.1"
mypy = "^1.13.0"
python-semantic-release = "^9.8.3"
commitizen = "^3.27.0"

[tool.poetry.scripts]
vpsweb = "vpsweb.__main__:cli"

[tool.semantic_release]
version_variables = [
    "src/vpsweb/__init__.py:__version__",
    "pyproject.toml:version"
]
branch = "main"
changelog_file = "CHANGELOG.md"
build_command = "pip install poetry && poetry build"
dist_path = "dist/"
upload_to_release = true
upload_to_pypi = false
commit_parser = "conventional"
major_on_zero = false

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "v$version"
version_scheme = "semver"
version_provider = "poetry"
update_changelog_on_bump = true
major_version_zero = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py39']

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true

[tool.coverage.run]
source = ["src"]
omit = [
    "tests/*",
    "*/tests/*",
    "*/__init__.py",
    "*/conftest.py",
    "*/tests/conftest.py"
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod"
]

[tool.coverage.html]
directory = "htmlcov"

[tool.coverage.xml]
output = "coverage.xml"
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--cov=vpsweb --cov-report=term-missing --cov-fail-under=50"
asyncio_mode = "auto"
markers = [
    "slow: marks tests as slow (run with -m 'not slow')",
    "integration: marks tests as integration tests",
    "weChat: marks tests that need WeChat credentials"
]